--- a/src/assets/css/project.css
+++ b/src/assets/css/project.css
@@ -2,6 +2,11 @@
     padding: 26px;
     border-radius: 10px;
     color: white;
+    transition: all 0.5s ease;
+}
+.project:hover {
+    transform: translateY(-3px);
+    background: rgba(255, 255, 255, 0.2);
 }
 .text {
     margin-bottom: 22px;
